minor style edits to prevent header from being cut off (thanks tom for the find!)

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -37,6 +37,11 @@ h3
 	font-size 50px
 	line-height 62px
 	font-weight 900
+	@media(max-width:992px)
+		font-size 40px
+	@media(max-width:767px)
+		font-size 30px
+		line-height 40px
 h4
 	font-size 42px
 	line-height 56px
@@ -370,6 +375,9 @@ iframe
 		top auto
 		transform none
 		-webkit-transform none
+.height-100
+	height auto
+	min-height 100vh
 [class*="height-"]:not(.artist-hero):not(.map-container)
 	@media(max-width:992px)
 		height auto
